docs/_archive/W259-grand-catalog-archive/prior-wave-grand-synthesis-2026-05-16/91-superseded-masters/kit-trees-pre-v62/v61/SOTA_REPOS_BEST_OF_BEST_FINAL_LIST.md
# SOTA Repos Best-of-Best Final List V61

Curated for Claude Code CLI. Stars are discovery signals, not install permission. The default stack is small; MCPs, memory, hooks, dashboards, bridge plugins, and one-line installers are audit-required.

## Foundation official

- `anthropics/claude-code`
- `openai/codex`
- `openai/codex-plugin-cc`
- `anthropics/skills`
- `openai/skills`
- `agentskills/agentskills`
- `modelcontextprotocol/modelcontextprotocol`
- `modelcontextprotocol/servers`
- `modelcontextprotocol/inspector`
- `github/github-mcp-server`
- `microsoft/playwright-mcp`
- `upstash/context7`
- `anthropics/claude-code-action`
- `anthropics/claude-code-base-action`
- `anthropics/claude-code-security-review`
- `anthropics/claude-agent-sdk-python`
- `anthropics/claude-agent-sdk-typescript`
- `anthropics/anthropic-sdk-python`
- `anthropics/anthropic-sdk-typescript`
- `openai/openai-agents-python`
- `openai/openai-python`
- `openai/openai-node`
- `github/codeql-action`
- `github/spec-kit`

## Default install core

- `ryoppippi/ccusage`
- `rtk-ai/rtk`
- `oraios/serena`
- `yamadashy/repomix`
- `BurntSushi/ripgrep`
- `sharkdp/fd`
- `jqlang/jq`
- `mikefarah/yq`
- `cli/cli`
- `pre-commit/pre-commit`
- `casey/just`
- `jdx/mise`
- `astral-sh/uv`

## Measurement visibility

- `ryoppippi/ccusage`
- `matt1398/claude-devtools`
- `sirmalloc/ccstatusline`
- `mcpware/cross-code-organizer`
- `jarrodwatts/claude-hud`
- `jeongwookie/WhereMyTokens`
- `spences10/claude-code-analytics`
- `phuryn/claude-usage`

## Token context elite

- `rtk-ai/rtk`
- `mksglu/context-mode`
- `chopratejas/headroom`
- `buildoak/wet`
- `jordan112/skinny-jeans`
- `ArthurDEV44/distill`
- `z19r/whetstone`
- `alexgreensh/token-optimizer`
- `juyterman1000/entroly`
- `zilliztech/claude-context`
- `aider-ai/aider`
- `mixedbread-ai/mgrep`
- `ast-grep/ast-grep`
- `tree-sitter/tree-sitter`
- `tirth8205/code-review-graph`
- `safishamsi/graphify`
- `mufeedvh/code2prompt`
- `mcpware/cross-code-organizer`
- `upstash/context7`
- `microsoft/playwright-mcp`

## Codebase intelligence

- `oraios/serena`
- `yamadashy/repomix`
- `zilliztech/claude-context`
- `aider-ai/aider`
- `mixedbread-ai/mgrep`
- `ast-grep/ast-grep`
- `tree-sitter/tree-sitter`
- `tirth8205/code-review-graph`
- `safishamsi/graphify`
- `mufeedvh/code2prompt`

## Memory MCP audit required

- `thedotmack/claude-mem`
- `mkreyman/mcp-memory-keeper`
- `doobidoo/mcp-memory-service`
- `supermemoryai/claude-supermemory`
- `supermemoryai/supermemory-mcp`
- `itsjwill/claude-memory`
- `GMaN1911/claude-cognitive`
- `lucasrosati/claude-code-memory-setup`
- `chopratejas/headroom`
- `runtimenoteslabs/memory-layer`
- `yoloshii/ClawMem`
- `mem0ai/mem0`
- `coleam00/mcp-mem0`
- `getzep/graphiti`
- `getzep/zep`
- `klaviyo/graphiti_mcp`
- `letta-ai/letta`
- `letta-ai/letta-code`
- `letta-ai/ai-memory-sdk`
- `chenxiaofie/memory-mcp`
- `DeusData/codebase-memory-mcp`

## High-star workflow reference selective

- `obra/superpowers`
- `affaan-m/everything-claude-code`
- `github/spec-kit`
- `garrytan/gstack`
- `gsd-build/get-shit-done`
- `mattpocock/skills`
- `bmad-code-org/BMAD-METHOD`
- `Fission-AI/OpenSpec`
- `Yeachan-Heo/oh-my-claudecode`
- `addyosmani/agent-skills`
- `EveryInc/compound-engineering-plugin`
- `humanlayer/humanlayer`
- `shanraisshan/claude-code-best-practice`
- `shareAI-lab/learn-claude-code`
- `Piebald-AI/claude-code-system-prompts`
- `Piebald-AI/tweakcc`

## Workflow harness elite

- `bmad-code-org/BMAD-METHOD`
- `eyaltoledano/claude-task-master`
- `automazeio/ccpm`
- `coleam00/context-engineering-intro`
- `Wirasm/PRPs-agentic-eng`
- `github/spec-kit`
- `gsd-build/get-shit-done`
- `maxritter/pilot-shell`
- `wshobson/agents`
- `shanraisshan/claude-code-best-practice`
- `affaan-m/everything-claude-code`
- `opensesh/KARIMO`
- `agent-sh/agentsys`
- `SethGammon/Citadel`
- `sipyourdrink-ltd/bernstein`
- `nutthouse/tutti`
- `humanlayer/advanced-context-engineering-for-coding-agents`
- `humanlayer/humanlayer`
- `rohitg00/pro-workflow`
- `shareAI-lab/learn-claude-code`
- `VILA-Lab/Dive-into-Claude-Code`

## Parallel operator elite

- `smtg-ai/claude-squad`
- `ComposioHQ/agent-orchestrator`
- `yxwucq/CCUI`
- `jamesrochabrun/AgentHub`
- `BloopAI/vibe-kanban`
- `stravu/crystal`
- `manaflow-ai/cmux`
- `fynnfluegge/agtx`
- `raine/workmux`
- `superset-sh/superset`
- `agent-next/cc-manager`
- `farion1231/cc-switch`
- `DanWahlin/ai-agent-board`
- `nwiizo/ccswarm`
- `preset-io/agor`
- `vnovick/itervox`
- `Sterll/claude-terminal`
- `gastownhall/gastown`

## Codex and second model bridges

- `openai/codex-plugin-cc`
- `bfly123/claude_codex_bridge`
- `xiaolai/codex-toolkit-for-claude`
- `promptadvisers/claudex`
- `sakibsadmanshajib/gemini-plugin-cc`
- `nikuscs/codex-cc-plugin`
- `tasict/opencode-plugin-cc`

## Official SDK provider surfaces

- `anthropics/claude-agent-sdk-python`
- `anthropics/claude-agent-sdk-typescript`
- `anthropics/anthropic-sdk-python`
- `anthropics/anthropic-sdk-typescript`
- `openai/openai-agents-python`
- `openai/openai-python`
- `openai/openai-node`
- `openai/skills`
- `microsoft/semantic-kernel`
- `microsoft/agent-framework`
- `microsoft/autogen`
- `google/adk-python`
- `google/adk-js`
- `google/adk-web`
- `strands-agents/sdk-python`
- `strands-agents/sdk-typescript`

## Agent frameworks reference

- `langchain-ai/langgraph`
- `langchain-ai/deepagents`
- `microsoft/agent-framework`
- `microsoft/autogen`
- `microsoft/semantic-kernel`
- `google/adk-python`
- `google/adk-js`
- `google/adk-web`
- `strands-agents/sdk-python`
- `strands-agents/sdk-typescript`
- `pydantic/pydantic-ai`
- `crewAIInc/crewAI`
- `agno-agi/agno`
- `huggingface/smolagents`
- `OpenHands/OpenHands`
- `OpenHands/software-agent-sdk`
- `aaif-goose/goose`
- `martimfasantos/ai-agents-frameworks`

## Eval benchmark observability

- `swe-bench/SWE-bench`
- `swe-agent/swe-agent`
- `SWE-agent/mini-swe-agent`
- `OpenHands/benchmarks`
- `openai/evals`
- `promptfoo/promptfoo`
- `confident-ai/deepeval`
- `braintrustdata/braintrust-sdk`
- `langfuse/langfuse`
- `explodinggradients/ragas`
- `evo-hq/evo`
- `Human-Agent-Society/CORAL`
- `Vvkmnn/awesome-ai-eval`
- `hparreao/Awesome-AI-Evaluation-Guide`
- `vysotin/agentic_evals_docs`
- `danielrosehill/Awesome-AI-Evaluations-Tools`

## Security quality grammar

- `trailofbits/claude-code-config`
- `trailofbits/claude-code-devcontainer`
- `edimuj/vexscan-claude-code`
- `snyk/agent-scan`
- `cisco-ai-defense/mcp-scanner`
- `cisco-ai-defense/skill-scanner`
- `cisco-ai-defense/defenseclaw`
- `InvariantLabs-ai/mcp-scan`
- `MCP-Defender/MCP-Defender`
- `mintmcp/agent-security`
- `slowmist/MCP-Security-Checklist`
- `aws-samples/sample-mcp-security-scanner`
- `semgrep/semgrep`
- `github/codeql-action`
- `gitleaks/gitleaks`
- `trufflesecurity/trufflehog`
- `aquasecurity/trivy`
- `google/osv-scanner`
- `ossf/scorecard`
- `step-security/harden-runner`
- `pre-commit/pre-commit`
- `astral-sh/ruff`
- `biomejs/biome`
- `oxc-project/oxc`
- `koalaman/shellcheck`
- `rhysd/actionlint`
- `hadolint/hadolint`
- `crate-ci/typos`
- `terraform-linters/tflint`
- `golangci/golangci-lint`
- `bridgecrewio/checkov`
- `evilmartians/lefthook`
- `woodruffw/zizmor`
- `oxsecurity/megalinter`
- `errata-ai/vale`
- `DavidAnson/markdownlint`
- `textlint/textlint`
- `get-alex/alex`
- `remarkjs/remark-lint`

## Architecture documentation quality

- `joelparkerhenderson/architecture-decision-record`
- `adr/madr`
- `structurizr/dsl`
- `arc42/arc42-template`
- `C4-PlantUML/C4-PlantUML`
- `mermaid-js/mermaid`

## Discovery only

- `hesreallyhim/awesome-claude-code`
- `onmyway133/awesome-claude-code`
- `subinium/awesome-claude-code`
- `bradAGI/awesome-cli-coding-agents`
- `sorrycc/awesome-code-agents`
- `RoggeOhta/awesome-codex-cli`
- `VoltAgent/awesome-agent-skills`
- `ComposioHQ/awesome-claude-skills`
- `andyrewlee/awesome-agent-orchestrators`
- `Agent-Analytics/awesome-multi-agent-orchestrators`
- `Picrew/awesome-agent-harness`
- `quemsah/awesome-claude-plugins`
- `jqueryscript/awesome-claude-code`
- `efij/awesome-claude-code-security`
- `ai-for-developers/awesome-ai-coding-tools`
- `caramaschiHG/awesome-ai-agents-2026`
- `ARUNAGIRINATHAN-K/awesome-ai-agents`
- `ai-boost/awesome-harness-engineering`
- `TsinghuaC3I/Awesome-Memory-for-Agents`
- `letta-ai/awesome-letta`

## Unique count

`230` unique entries.